--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "@types/three": "^0.152.1"
+    "@types/three": "^0.152.1",
+    "eslint-config-next": "^13.4.7"
   }
 }
