--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@types/aos": "^3.0.4",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-icons": "^4.10.1",
+    "tailwindcss": "^3.3.2",
     "three": "^0.153.0",
     "typescript": "5.1.5"
   },
