--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/react-dom": "18.2.6",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "postcss": "8.4.24",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
