--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "aos": "^2.3.4",
+    "aurora-ui": "^1.3.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.17",
